<resources>
    <string name="app_name">TiềnMới</string>
    <string name="welcome_text1">TiềnMới – Vay tiền \nnhanh, tiện lợi, an toàn.</string>
    <string name="welcome_text2"><![CDATA[Vay nhanh<br/>gọn trong<br/>3 bước –<br/>Hạn mức lên<br/>đến <font color="#F8B62D">30 triệu!</font>]]></string>
    <string name="login_text1">Đăng nhập</string>
    <string name="login_text2">Dùng số điện thoại để đăng ký hoặc đăng nhập</string>
    <string name="login_text3">Đăng nhập bằng OTP</string>
    <string name="login_text4">Đăng nhập bằng mật khẩu</string>
    <string name="login_text5">Số điện thoại</string>
    <string name="login_text6">Nhập OTP</string>
    <string name="login_text7">Lấy mã</string>
    <string name="login_text8">Đăng nhập</string>
    <string name="login_text9">Gặp khó khăn khi đăng nhập?\nHãy gọi ngay cho tổng đài hỗ trợ nhé!</string>
    <string name="login_text10"><![CDATA[Bằng cách đăng ký hoặc đăng nhập,<br/>tôi đồng ý tuân thủ <font color="#0063DB">Chính sách quyền riêng tư.</font>]]></string>
    <string name="confirmCertification1">Số tiền vay  (VND)</string>
    <string name="confirmCertification2">Lãi suất năm</string>
    <string name="confirmCertification3">Thời gian vay</string>
    <string name="confirmCertification4">Vay ngay bây giờ</string>
    <string name="confirmCertification5">Chúng tôi từ chối cho vay đối với người dưới 18 tuổi</string>
    <string name="confirmCertification6">Đăng ký vay dễ dàng – 3 bước là xong</string>
    <string name="confirmCertification7">Rút tiền linh hoạt</string>
    <string name="confirmCertification8">Giải ngân nhanh</string>
    <string name="confirmCertification9">Nền tảng này hứa hẹn sẽ bảo vệ tính bảo mật dữ liệu của\nbạn và sẽ không phổ biến thông tin cá nhân của bạn。</string>
    <string name="certificationOne1">+5.000.000\nhạn mức</string>
    <string name="certificationOne2">Bước 1:\nvui lòng hoàn thiện thông tin cơ bản của bạn.</string>
    <string name="certificationOne3">Nhập họ và tên</string>
    <string name="certificationOne4">Nhập số CMND/CCCD</string>
    <string name="certificationOne5">Ngày sinh</string>
    <string name="certificationOne6">Nhập họ và tên</string>
    <string name="certificationOne7">Vui lòng chọn</string>
    <string name="certificationOne8">Giới tính</string>
    <string name="certificationOne9">Vui lòng điền trình độ học vấn của bạn.</string>
    <string name="certificationOne10">Tình trạng hôn nhân</string>
    <string name="certificationOne11">Facebook</string>
    <string name="certificationOne12">zalo</string>
    <string name="certificationOne13">Email</string>
    <string name="certificationOne14">Lỗi nhập liệu</string>
    <string name="certificationOne15">Bước tiếp theo</string>
    <string name="certificationOne16">Quay lại</string>
    <string name="certificationOne17">Vui lòng điền đầy đủ thông tin</string>
    <string name="certificationOne18">Lỗi nhập liệu</string>
    <string name="certificationTwo1">Bước 2:\nVui lòng hoàn thiện thông tin nghề nghiệp của bạn.</string>
    <string name="certificationTwo2">Vui lòng điền nghề nghiệp của bạn.</string>
    <string name="certificationTwo3">Tình hình thu nhập của bạn</string>
    <string name="certificationTwo4">Vui lòng điền tên công ty.</string>
    <string name="certificationTwo5">Số điện thoại nơi làm việc</string>
    <string name="certificationTwo6">Hoàn thiện thông tin cư trú</string>
    <string name="certificationTwo7">Vui lòng điền tỉnh/thành phố của bạn.</string>
    <string name="certificationTwo8">Vui lòng điền quận/huyện của bạn.</string>
    <string name="certificationTwo9">Vui lòng điền địa chỉ cụ thể của bạn.</string>
    <string name="certificationTwo10">Thông tin gia đình hoặc người liên hệ</string>
    <string name="certificationTwo11">Họ và tên người liên hệ khẩn cấp</string>
    <string name="certificationTwo12">Số điện thoại người liên hệ khẩn cấp</string>
    <string name="certificationTwo13">Mối quan hệ với người liên hệ khẩn cấp</string>
    <string name="certificationTwo14">Họ và tên của người thân</string>
    <string name="certificationTwo15">Số điện thoại của người thân</string>
    <string name="certificationTwo16">Mối quan hệ với người thân</string>
    <string name="certificationTwo17">+10.000.000\nhạn mức</string>
    <string name="certificationThree1">Bước 3:\nVui lòng hoàn thiện thông tin thẻ ngân hàng.</string>
    <string name="certificationThree2">Họ và tên</string>
    <string name="certificationThree3">Chọn tên ngân hàng</string>
    <string name="certificationThree4">Số tài khoản ngân hàng</string>
    <string name="certificationThree5">Tải ảnh mặt trước CMND/CCCD rõ ràng.</string>
    <string name="certificationThree6">Tải ảnh mặt sau CMND/CCCD rõ ràng.</string>
    <string name="certificationThree7">Lưu ý:\nHãy đảm bảo ảnh rõ ràng để quá trình \nxét duyệt diễn ra nhanh hơn nhé!</string>
    <string name="certificationThree8">Tải lên ảnh tự chụp khuôn mặt của bạn.</string>
    <string name="certificationThree9">Vui lòng tải lên một bức ảnh rõ nét, chỉ hiển thị khuôn mặt của bạn trong điều kiện ánh sáng tốt. Để kết quả chính xác, vui lòng tránh để người khác hoặc vật thể xuất hiện trong ảnh. Nếu gặp sự cố, bạn có thể thử xoá và cài đặt lại ứng dụng, đồng thời kiểm tra và cấp đủ quyền cần thiết.</string>
    <string name="certificationThree10">+15.000.000\nhạn mức</string>
    <string name="LoanConfirmation1"><![CDATA[0812xxxx61 đã vay thành công <font color="#60A7FE">15.000.000</font>]]></string>
    <string name="LoanConfirmation2"><![CDATA[0942xxxx51 đã vay thành công <font color="#60A7FE">20.000.000</font>]]></string>
    <string name="LoanConfirmation3"><![CDATA[0332xxxx23 đã vay thành công <font color="#60A7FE">5.000.000</font>]]></string>
    <string name="LoanConfirmation13"><![CDATA[0902xxxx82 đã vay thành công <font color="#60A7FE">8.000.000</font>]]></string>
    <string name="LoanConfirmation4">Số tiền vay</string>
    <string name="LoanConfirmation5">*Số tiền thực tế được giải ngân sẽ phụ thuộc\nvào tình hình tín dụng của bạn.</string>
    <string name="LoanConfirmation6">Kỳ hạn vay </string>
    <string name="LoanConfirmation7">Lãi suất</string>
    <string name="LoanConfirmation8">Ngân hàng nhận tiền</string>
    <string name="LoanConfirmation9">Số tài khoản ngân hàng</string>
    <string name="LoanConfirmation10"><![CDATA[Nhấn ‘Đăng ký vay’ nghĩa là bạn đồng ý với<br/><font color="#0063DB">‘Hợp đồng vay’</font>.Giải ngân nhanh nếu được duyệt.]]></string>
    <string name="LoanConfirmation11">Đăng ký vay</string>
    <string name="LoanConfirmation12">Ngày</string>
    <string name="operator1">Vui lòng chọn nhà mạng ủy quyền</string>
    <string name="operator2">Viettel</string>
    <string name="operator3">MoBiFone</string>
    <string name="operator4">Vinaphone</string>
    <string name="operator5">Vietnamobile</string>
    <string name="operator6">SAYMEE</string>
    <string name="operator7">Nhập vào ủy quyền</string>
    <string name="operator8">Vui lòng nhận mã xác minh trước</string>
    <string name="operator9">Số điện thoại</string>
    <string name="operator10">Nhập mã xác minh</string>
    <string name="operator11">Nhận mã xác minh</string>
    <string name="operator12">Bước tiếp theo</string>
    <string name="operator13">Cần lấy mã xác minh lần 2</string>
    <string name="operator14">Sai, kiểm tra mã hoặc số điện thoại</string>
    <string name="text_return">Quay lại</string>
    <string name="main1">Vay của tôi</string>
    <string name="main2">Thông báo</string>
    <string name="main3">Của tôi</string>
    <string name="min1">Thông tin cá nhân</string>
    <string name="min2">Hủy tài khoản</string>
    <string name="min3">Hotline：</string>
    <string name="min4">Email hỗ trợ：</string>
    <string name="min5">Đăng xuất</string>
    <string name="min6">Cần sửa đổi liên hệ dịch vụ khách hàng</string>
    <string name="min7">Liên hệ với dịch vụ khách hàng để xóa</string>
    <string name="min8">Sao chép thành công</string>
    <string name="dialog1">Chính sách quyền riêng tư</string>
    <string name="dialog2">Đồng ý</string>
    <string name="dialog3">Hủy bỏ</string>
    <string name="dialog4">Tìm kiếm</string>
    <string name="dialog5">Thu thập một số dữ liệu của bạn cho mục\nđích quản lý rủi ro và gian lận</string>
    <string name="dialog6">·Máy ảnh</string>
    <string name="dialog7">Đồng ý và tiếp tục</string>
    <string name="dialog8">Sao chép</string>
    <string name="dialog9">Sao chép thành công</string>
    <string name="dialog10">Cảm ơn bạn đã phản hồi!</string>
    <string name="dialog11">Chúc mừng! Bạn đã đăng ký khoản vay thành công.\n
Bạn đánh giá thế nào về trải nghiệm với TiềnMới?
</string>
    <string name="dialog12">Để sau</string>
    <string name="dialog13">Rất tiếc vì trải nghiệm chưa tốt.\n
Hãy chia sẻ ý kiến để chúng tôi phục vụ bạn tốt hơn.\n
Mọi phản hồi đều được trân trọng!
</string>
    <string name="dialog14">Gửi phản hồi</string>
    <string name="dialog15">Để sau</string>
    <string name="dialog16">Rất mong bạn dành tặng TiềnMới 5 sao trên Google Play!\n
Mỗi đánh giá tích cực của bạn là nguồn động lực quý báu để chúng tôi không ngừng hoàn thiện dịch vụ và hỗ trợ bạn tốt hơn.
</string>
    <string name="dialog17">Gửi đánh giá</string>
    <string name="dialog18">Không, cảm ơn</string>
    <string name="dialog19">Góp ý của bạn giúp chúng tôi cải thiện dịch vụ.\n
Gặp vấn đề gì? Hãy chia sẻ ngay nhé!

</string>
    <string name="dialog20">Nâng cấp phiên bản mới nhất để mở khóa thêm tính năng và ưu đãi giới hạn!</string>
    <string name="dialog21">Đã có phiên bản mới, vui lòng cập nhật ngay để có trải nghiệm tốt hơn. Nâng cấp lên phiên bản mới nhất để mở khóa thêm nhiều tính năng và ưu đãi giới hạn!</string>
    <string name="dialog22">Đang tải...</string>
    <string name="dialog23">Đơn hàng đang được tạo, vui lòng chờ（%1$ds）....</string>
    <string name="dialog24">Xác nhận</string>
    <string name="fragment1">Bổ sung thông tin để tăng tỷ lệ phê duyệt</string>
    <string name="fragment2">Đơn của bạn đang được xử lý nhanh chóng, hãy kiên nhẫn chờ một chút nhé!</string>
    <string name="fragment3">Đang xét duyệt</string>
    <string name="fragment4">Rất tiếc, hạn mức hiện tại đã hết. Mong bạn đợi %1$d ngày rồi nộp lại đơn nhé.</string>
    <string name="fragment5">Hạn mức hiện tại đã được khôi phục, bạn có thể nộp đơn lại.</string>
    <string name="fragment6">Không được phê duyệt</string>
    <string name="fragment7">Chờ rút tiền</string>
    <string name="fragment8">Chúc mừng! Khoản vay đã được duyệt! Nhấn \'Rút tiền\' để hệ thống xử lý ngay nhé!</string>
    <string name="fragment9">Số tiền vay：</string>
    <string name="fragment10">Đang giải ngân</string>
    <string name="fragment11">Khoản vay của bạn đang được giải ngân, thời gian xử lý có thể mất vài phút.</string>
    <string name="fragment12">Ngày phải trả：</string>
    <string name="fragment13">Khoản vay quá hạn %1$d ngày. Vui lòng thanh toán để tránh phí phạt và ảnh hưởng sau này.</string>
    <string name="fragment14">Số tiền phải trả：</string>
    <string name="fragment15">Thanh toán ngay để nhận thêm sản phẩm và hạn mức vay cao hơn nhé!</string>
    <string name="repayment5">Số tiền phải trả</string>
    <string name="repayment6">Số tiền gốc phải trả</string>
    <string name="repayment7">Phí quản lý tài khoản</string>
    <string name="repayment8">Phí xét duyệt</string>
    <string name="repayment9">Phí dịch vụ</string>
    <string name="repayment10">Lãi suất</string>
    <string name="repayment11">Phí xử lý</string>
    <string name="repayment12">Phí phạt trả chậm</string>
    <string name="repayment13">Trả ngay để hoàn tất</string>
    <string name="repayment17">Lưu ý: Vui lòng chỉ chuyển khoản đến tài khoản được chỉ định duy nhất ở trên. Khi chuyển khoản, hãy kiểm tra chính xác tên người nhận và số tài khoản.
Khi hoàn trả khoản vay, bắt buộc ghi rõ họ tên và số điện thoại của bạn trong phần nội dung chuyển khoản.
</string>
</resources>