<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_5dp"
    android:padding="@dimen/space_20">
    <TextView
        android:id="@+id/tv1_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_30"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv2_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1_id"
        android:layout_marginTop="@dimen/space_20"
        android:text="@string/dialog5"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv3_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv2_id"
        android:layout_marginTop="@dimen/space_20"
        android:text="@string/dialog6"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tv4_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_35"
        android:layout_below="@id/tv3_id"
        android:layout_marginTop="@dimen/space_20"
        android:background="@drawable/shape_60a7fe_5dp"
        android:gravity="center"
        android:text="@string/dialog7"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold" />
</RelativeLayout>