<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bj"
    tools:context=".ui.activity.TienRepaymentActivity">

    <include
        android:id="@+id/head_id"
        layout="@layout/return_layout" />

    <TextView
        android:id="@+id/tv1_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_20"
        android:text="@string/repayment5"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv2_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_10"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_28"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rl1_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv2_id"
        android:layout_marginStart="@dimen/space_20"
        android:layout_marginTop="@dimen/space_20"
        android:layout_marginEnd="@dimen/space_20"
        android:background="@drawable/shape_white_5dp"
        android:paddingStart="@dimen/space_15"
        android:paddingTop="@dimen/space_20"
        android:paddingEnd="@dimen/space_15"
        android:paddingBottom="@dimen/space_20">

        <TextView
            android:id="@+id/tv3_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/repayment6"
            android:textColor="@color/color_60a7fe"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv4_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/space_10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv5_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv3_id"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/repayment7"
            android:textColor="@color/color_60a7fe"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv6_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv3_id"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/space_10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv7_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv5_id"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/repayment8"
            android:textColor="@color/color_60a7fe"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv8_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv5_id"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/space_10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />


        <TextView
            android:id="@+id/tv9_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv7_id"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/repayment9"
            android:textColor="@color/color_60a7fe"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv10_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv7_id"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/space_10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />


        <TextView
            android:id="@+id/tv11_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv9_id"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/repayment10"
            android:textColor="@color/color_60a7fe"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv12_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv9_id"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/space_10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv13_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv11_id"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/repayment11"
            android:textColor="@color/color_60a7fe"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv14_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv11_id"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/space_10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv15_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv13_id"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/repayment12"
            android:textColor="@color/color_60a7fe"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv16_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv13_id"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/space_10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_next_step"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_40"
        android:layout_above="@id/tv_return"
        android:layout_marginStart="@dimen/space_40"
        android:layout_marginTop="@dimen/space_50"
        android:layout_marginEnd="@dimen/space_40"
        android:background="@drawable/shape_60a7fe_5dp"
        android:gravity="center"
        android:text="@string/repayment13"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tv_return"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_40"
        android:layout_marginStart="@dimen/space_40"
        android:layout_marginTop="@dimen/sp_10"
        android:layout_marginEnd="@dimen/space_40"
        android:layout_marginBottom="@dimen/space_60"
        android:background="@drawable/shape_60a7fe_5dp_"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/certificationOne16"
        android:textColor="@color/color_60a7fe"
        android:textSize="@dimen/sp_14" />
</RelativeLayout>