<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bj"
    tools:context=".ui.activity.TienOperatorOneOtpActivity">
    <include
        android:id="@+id/head_id"
        layout="@layout/return_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_id"
        android:layout_marginStart="@dimen/space_20"
        android:layout_marginTop="@dimen/space_50"
        android:layout_marginEnd="@dimen/space_20"
        android:background="@drawable/shape_white_5dp">

        <ImageView
            android:id="@+id/iv1_id"
            android:layout_width="@dimen/space_196"
            android:layout_height="@dimen/space_125"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_20"
            android:src="@mipmap/operator1" />

        <TextView
            android:id="@+id/tv1_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv1_id"
            android:gravity="center"
            android:text="@string/operator8"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et1_id"
            android:layout_width="@dimen/space_200"
            android:layout_height="@dimen/space_30"
            android:layout_below="@id/tv1_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_20"
            android:background="@drawable/shape_60a7fe_5dp_"
            android:gravity="center"
            android:hint="@string/operator9"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_10"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv2_id"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_30"
            android:layout_below="@id/et1_id"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/space_30"
            android:layout_marginEnd="@dimen/space_30"
            android:background="@drawable/shape_60a7fe_5dp"
            android:gravity="center"
            android:paddingStart="@dimen/space_10"
            android:paddingEnd="@dimen/space_10"
            android:text="@string/operator11"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_10"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et2_id"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_30"
            android:layout_below="@id/et1_id"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/space_30"
            android:layout_marginTop="@dimen/space_30"
            android:layout_marginEnd="@dimen/space_20"
            android:layout_toStartOf="@id/tv2_id"
            android:background="@drawable/shape_60a7fe_5dp_"
            android:gravity="center"
            android:hint="@string/operator10"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/space_50"
            android:textSize="@dimen/sp_10"
            android:textStyle="bold" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_next_step"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_40"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/space_40"
        android:layout_marginTop="@dimen/space_20"
        android:layout_marginEnd="@dimen/space_40"
        android:layout_marginBottom="@dimen/space_50"
        android:background="@drawable/shape_60a7fe_5dp"
        android:gravity="center"
        android:text="@string/operator12"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />
</RelativeLayout>