<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_b3d5ff"
    tools:context=".ui.activity.TienRepaymentDisplayItemsActivity">

    <include
        android:id="@+id/head_id"
        layout="@layout/return_layout" />

    <RelativeLayout
        android:id="@+id/rl1_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_id"
        android:layout_marginStart="@dimen/space_20"
        android:layout_marginTop="@dimen/space_20"
        android:layout_marginEnd="@dimen/space_20"
        android:background="@drawable/shape_white_5dp"
        android:paddingStart="@dimen/space_15"
        android:paddingTop="@dimen/space_20"
        android:paddingEnd="@dimen/space_15"
        android:paddingBottom="@dimen/space_20">

        <TextView
            android:id="@+id/tv1_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/repayment6"
            android:textColor="@color/color_60a7fe"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv2_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv1_id"
            android:layout_marginTop="@dimen/space_10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv3_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv2_id"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/repayment7"
            android:textColor="@color/color_60a7fe"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv4_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv3_id"
            android:layout_marginTop="@dimen/space_10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv5_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv4_id"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/repayment8"
            android:textColor="@color/color_60a7fe"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv6_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv5_id"
            android:layout_marginTop="@dimen/space_10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv7_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv6_id"
            android:layout_marginTop="@dimen/space_30"
            android:text="@string/repayment17"
            android:textColor="@color/color_fa2209" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_return"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_40"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/space_40"
        android:layout_marginTop="@dimen/sp_10"
        android:layout_marginEnd="@dimen/space_40"
        android:layout_marginBottom="@dimen/space_60"
        android:background="@drawable/shape_60a7fe_5dp_"
        android:gravity="center"
        android:text="@string/certificationOne16"
        android:textColor="@color/color_60a7fe"
        android:textSize="@dimen/sp_14" />
</RelativeLayout>